feat(components/switcher): update logic to select #000

--- a/apps/doc/src/app/components/switcher/examples/switcher-basic-example/switcher-basic-example.component.html
+++ b/apps/doc/src/app/components/switcher/examples/switcher-basic-example/switcher-basic-example.component.html
@@ -6,4 +6,7 @@
 
 <br />
 
-<button (click)="updateValue()" prizmButton>Update value</button>
+<div style="display: flex; gap: 1rem">
+  <button (click)="updateValue()" prizmButton>Update value</button>
+  <button (click)="control.setValue(99)" prizmButton>Update extra index</button>
+</div>
