--- a/apps/doc/src/app/components/switcher/examples/switcher-projection-example/switcher-projection-example.component.html
+++ b/apps/doc/src/app/components/switcher/examples/switcher-projection-example/switcher-projection-example.component.html
@@ -14,4 +14,7 @@
 </div>
 <br />
 
-<button (click)="updateValue()" prizmButton>Update value</button>
+<div style="display: flex; gap: 1rem">
+  <button (click)="updateValue()" prizmButton>Update value</button>
+  <button (click)="control.setValue(99)" prizmButton>Update extra index</button>
+</div>
