--- a/libs/components/src/lib/components/query-builder/query-builder.component.html
+++ b/libs/components/src/lib/components/query-builder/query-builder.component.html
@@ -32,7 +32,7 @@
       <div class="query-builder__node-content">
         <div class="query-builder__condition">
           <ng-container
-            [ngTemplateOutlet]="_conditionNodeTemplate().template"
+            [ngTemplateOutlet]="conditionNodeTemplate().template"
             [ngTemplateOutletContext]="{ $implicit: node.form.controls }"
           />
         </div>
@@ -56,7 +56,7 @@
             [switchers]="(operatorsItems$ | async) ?? []"
             [size]="'m'"
             [selectedSwitcherIdx]="_getOperatorIndex(node.form.controls.operator.value)"
-            (selectedSwitcherIdxChange)="node.form.controls.operator.setValue(_operators[$event])"
+            (selectedSwitcherIdxChange)="node.form.controls.operator.setValue(operators[$event])"
           >
             <!-- [formControl]="node.form.controls.operator" -->
           </prizm-switcher>
