feat(components/switcher): update logic by selector #000

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
@@ -15,7 +15,7 @@
   </div>
 </button>
 
-<ng-container *ngIf="prizmHasValue.empty$ | async">
+<ng-container *ngIf="prizmHasValue.empty">
   <button
     class="switcher switcher_icon"
     [pseudoPressed]="isActive"
