--- a/apps/doc/src/app/components/icons/base/examples/custom/icons-custom-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/custom/icons-custom-example.component.html
@@ -1,6 +1,6 @@
 <ng-container *prizmIfLang="'russian'; else eng">
   <div class="description">
-    Для использования пользовательских иконок вы должны предварительно зарегистрировать их с помощью нашего
+    Для использования иконок вы должны предварительно зарегистрировать их с помощью нашего
     сервиса.
   </div>
 </ng-container>
