--- a/apps/doc/src/app/components/switcher/examples/switcher-projection-example/switcher-projection-example.component.html
+++ b/apps/doc/src/app/components/switcher/examples/switcher-projection-example/switcher-projection-example.component.html
@@ -1,6 +1,6 @@
 <prizm-switcher [formControl]="control" fullWidth type="outer">
   <prizm-switcher-item
-    *ngFor="let item of switchers"
+    *ngFor="let item of switchers$ | async"
     [disabled]="!!item.disabled"
     [appearance]="item.appearance ?? 'secondary'"
     [appearanceType]="item.appearanceType ?? 'ghost'"
@@ -15,6 +15,7 @@
 <br />
 
 <div style="display: flex; gap: 1rem">
+  <button (click)="changeItems()" prizmButton>Switch</button>
   <button (click)="updateValue()" prizmButton>Update value</button>
   <button (click)="control.setValue(99)" prizmButton>Update extra index</button>
 </div>
