fix(components/wrapper): wrapper overrides button's cursor property #402

--- a/libs/components/src/lib/components/button/button.component.less
+++ b/libs/components/src/lib/components/button/button.component.less
@@ -10,7 +10,8 @@
   padding: 0;
   border-radius: var(--prizm-button-radius, 2px);
   background: transparent;
-  // TODO 5.0.0: set default min-width 120px/64px according to prizm button component description, reseach needed
+  cursor: pointer;
+  // TODO 5.0.0: set default min-width 120px/64px according to prizm button component description, research needed
   min-width: var(--prizm-button-min-width, unset);
 
   &._focus-visible {
