--- a/libs/components/src/lib/directives/wrapper/wrapper.component.less
+++ b/libs/components/src/lib/directives/wrapper/wrapper.component.less
@@ -6,7 +6,7 @@
   appearance: none;
   border-radius: inherit;
   box-sizing: border-box;
-  cursor: pointer;
+  cursor: inherit;
   color: var(--prizm-text-icon-exception);
   border-left-width: var(--prizm-wrapper-border-left-width);
   border-right-width: var(--prizm-wrapper-border-right-width);
