--- a/apps/doc/src/app/components/input/input-layout-date-time-range/examples/base/input-layout-date-time-range-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time-range/examples/base/input-layout-date-time-range-base-example.component.html
@@ -1,7 +1,13 @@
 <prizm-input-layout label="Выберите период">
-  <prizm-input-layout-date-time-range [formControl]="value"> </prizm-input-layout-date-time-range>
+  <prizm-input-layout-date-time-range [formControl]="value" [min]="min" [max]="max">
+  </prizm-input-layout-date-time-range>
 </prizm-input-layout>
 <h3>
   Value:
   <b>{{ value.value }}</b>
 </h3>
+
+<pre>
+  min: {{ min.toLocalNativeDate() }}
+  max: {{ max.toLocalNativeDate() }}
+</pre>
