--- a/libs/components/src/lib/components/input/input-date-time-range/input-layout-date-time-range.component.html
+++ b/libs/components/src/lib/components/input/input-date-time-range/input-layout-date-time-range.component.html
@@ -138,7 +138,7 @@
             [style.--prizm-dropdown-host-width]="'100%'"
             [ngModelOptions]="{ standalone: true }"
             [ngModel]="value?.timeRange?.from"
-            [items]="timeItems"
+            [items]="timeItems | prizmTimeConstraints : $any(value?.dayRange?.from) : min : max"
             [strict]="timeStrict"
             [mode]="timeMode"
             (ngModelChange)="updateTimeFrom($event)"
@@ -154,7 +154,7 @@
             [ngModel]="value?.timeRange?.to"
             [ngModelOptions]="{ standalone: true }"
             [strict]="timeStrict"
-            [items]="timeItems"
+            [items]="timeItems | prizmTimeConstraints : $any(value?.dayRange?.to) : min : max"
             [mode]="timeMode"
             (ngModelChange)="updateTimeTo($event)"
           >
