feat(doc): add link to github issue page #000

--- a/apps/doc/src/app/about-prizm/contacts/contacts.component.html
+++ b/apps/doc/src/app/about-prizm/contacts/contacts.component.html
@@ -6,7 +6,8 @@
   <p>Для связи с командой Prizm можно воспользоваться следующими способами:</p>
   <ol class="decimal">
     <li>
-      С помощью Issue - способ описан на странице
+      С помощью <a href="https://github.com/zyfra/Prizm/issues">Issue</a> - подробнее способ описан на
+      странице
       <a href="{{ storybookBaseUrl }}/how-to-work/contributing">Сontributing</a>
     </li>
   </ol>
