--- a/apps/doc/src/app/how-to-work/contributing/contributing.component.html
+++ b/apps/doc/src/app/how-to-work/contributing/contributing.component.html
@@ -3,7 +3,10 @@
     <h2 class="prizm-space_top-0">Issue</h2>
 
     <p class="prizm-space_top-0">
-      <strong>Любое обращение начинается с создания issue</strong>
+      <strong
+        >Любое обращение начинается с создания
+        <a href="https://github.com/zyfra/Prizm/issues">issue</a></strong
+      >
     </p>
   </div>
 
