--- a/apps/doc/src/app/how-to-work/set-task/set-task.component.html
+++ b/apps/doc/src/app/how-to-work/set-task/set-task.component.html
@@ -7,7 +7,7 @@
   </p>
   <ol class="decimal">
     <li>
-      С помощью Issue (способ описан на странице
+      С помощью <a href="https://github.com/zyfra/Prizm/issues">Issue</a> (подробнее способ описан на странице
       <a href="{{ storybookBaseUrl }}/how-to-work/contributing">Сontributing</a>)
     </li>
   </ol>
