--- a/apps/doc/src/app/components/input/input-layout-date-time-range/input-layout-date-time-range.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time-range/input-layout-date-time-range.component.html
@@ -10,6 +10,9 @@
       <prizm-input-layout-date-time-range-disabled-example>
       </prizm-input-layout-date-time-range-disabled-example>
     </prizm-doc-example>
+    <prizm-doc-example id="native" [content]="exampleNativeDate" heading="Native Date Transformer">
+      <prizm-input-layout-date-time-range-native-example></prizm-input-layout-date-time-range-native-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
