fix(components/multi-select): fix bugs from tests #000

--- a/apps/doc/src/app/components/input/input-multi-select/examples/async/multi-select-async-example.component.html
+++ b/apps/doc/src/app/components/input/input-multi-select/examples/async/multi-select-async-example.component.html
@@ -19,7 +19,7 @@
       [totalRecords]="totalElements"
       [page]="pageNumber"
       [rows]="pageSize"
-      [rowsCountOptions]="[10, 50, 100, 200]"
+      [rowsCountOptions]="[]"
       [pageLinkSize]="7"
       [paginatorOptions]="{
         noRowsSelectorLabel: true,
