feat(components/switcher): added support value #000

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -7,6 +7,14 @@
       <prizm-switcher-projection-example></prizm-switcher-projection-example>
     </prizm-doc-example>
 
+    <prizm-doc-example
+      id="projection-value"
+      [content]="exampleProjectionValueSwitcher"
+      heading="Projection With Custom Value"
+    >
+      <prizm-switcher-projection-value-example></prizm-switcher-projection-value-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="base" [content]="exampleBasicSwitcher" heading="Basic">
       <prizm-switcher-basic-example></prizm-switcher-basic-example>
     </prizm-doc-example>
