feat(components/switcher): added id support and example #000

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -19,6 +19,10 @@
       <prizm-switcher-basic-example></prizm-switcher-basic-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="base-with-id" [content]="exampleBasicWithIdSwitcher" heading="Basic With Id ">
+      <prizm-switcher-basic-value-example></prizm-switcher-basic-value-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="async" [content]="exampleAsyncSwitcher" heading="Async">
       <prizm-switcher-async-example></prizm-switcher-async-example>
     </prizm-doc-example>
