--- a/apps/doc/src/app/components/switcher/examples/switcher-projection-value-example/switcher-projection-value-example.component.html
+++ b/apps/doc/src/app/components/switcher/examples/switcher-projection-value-example/switcher-projection-value-example.component.html
@@ -16,4 +16,5 @@
 <div style="display: flex; gap: 1rem">
   <button (click)="changeItems()" prizmButton>Switch</button>
   <button (click)="updateValue()" prizmButton>Update value</button>
+  <button (click)="control.setValue('-')" prizmButton>Update extra value</button>
 </div>
