fix(components/switcher): fix outer style #000

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
@@ -43,6 +43,10 @@
   }
 
   &[switcher-type='outer'] {
+    &[data-appearance-type='outline'] .switcher {
+      min-height: unset;
+    }
+
     &[data-size='l'] {
       .switcherSizing(40px, 14px, 16px);
     }
