fix(doc): initial value from form control #000

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -83,9 +83,9 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="selectedSwitcherIdx"
+        [documentationPropertyMode]="control.disabled ? null : 'input'"
         documentationPropertyName="selectedSwitcherIdx"
         documentationPropertyType="number"
-        documentationPropertyMode="input"
       >
         Selected switcher index
       </ng-template>
