feat(components/switcher): can choose on disabled #000

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -83,7 +83,7 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="selectedSwitcherIdx"
-        [documentationPropertyMode]="control.disabled ? null : 'input'"
+        [documentationPropertyMode]="'input'"
         documentationPropertyName="selectedSwitcherIdx"
         documentationPropertyType="number"
       >
