fix(components/dropdown): fix merge confclits #000

--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.html
@@ -8,7 +8,7 @@
     [prizmDropdownHostWidth]="dropdownWidth"
     [prizmDropdownMinHeight]="minDropdownHeight"
     [prizmDropdownMaxHeight]="maxDropdownHeight"
-    [autoReposition]="dropdownAutoReposition"
+    [autoReposition]="!!dropdownAutoReposition"
     [dropdownStyles]="dropdownStyles"
     [dropdownClasses]="dropdownClasses"
     (isOpenChange)="opened$$.next($event)"
