--- a/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.html
@@ -1,11 +1,13 @@
-<div class="item">
+<div
+  class="item"
+  [class.selected]="
+    value | prizmCallFunc : treeSelectSelectedDirective.isSelected.bind(treeSelectSelectedDirective) | async
+  "
+>
   <button
     *ngIf="children.length"
     [icon]="iconTemplate"
     [class.opened]="opened"
-    [class.selected]="
-      item | prizmCallFunc : treeSelectSelectedDirective.isSelected.bind(treeSelectSelectedDirective) | async
-    "
     (click)="onToggle($event)"
     prizmIconButton
     appearanceType="ghost"
@@ -17,9 +19,9 @@
     <prizm-icons-full [name]="'chevron-mini-right'" [size]="24"></prizm-icons-full>
   </ng-template>
 
-  <span class="value">
+  <div class="value">
     <ng-content></ng-content>
-  </span>
+  </div>
 </div>
 
 <div class="children">
