--- a/libs/components/src/lib/components/data-list/data-list-wrapper.component.html
+++ b/libs/components/src/lib/components/data-list/data-list-wrapper.component.html
@@ -1,4 +1,4 @@
-<prizm-data-list class="block" [style.--prizm-data-list-border]="0">
+<prizm-data-list class="block" [style.--prizm-data-list-border]="0" prizmDropdown>
   <ng-container #viewContainerRef></ng-container>
   <ng-content></ng-content>
 </prizm-data-list>
