--- a/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
@@ -3,6 +3,7 @@
   [content]="dropdown"
   [isOpen]="$any(opened$ | async)"
   [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
+  [prizmDropdownHostWidth]="'100%'"
   (isOpenChange)="opened$$.next($event)"
 >
   <input
@@ -12,6 +13,8 @@
     [disabled]="disabled"
     [tabIndex]="!disabled ? 0 : -1"
     [readonly]="true"
+    [ngModelOptions]="{ standalone: true }"
+    [ngModel]="treeSelectStringifyDirective.stringifiedSelected$ | async"
     (click)="opened$$.next(true)"
     prizmInput
   />
@@ -19,7 +22,6 @@
 
 <ng-template #dropdown>
   <prizm-input-tree-select-data-list-wrapper
-    [items]="items"
     [dataListDirective]="dataListDirective"
     (prizmOnDestroy)="onTouch()"
   >
