feat(components/tree-select): pass i18n add params #0

--- a/libs/components/src/lib/components/dropdowns/tree-select/tree-select-data-list-wrapper.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/tree-select-data-list-wrapper.component.html
@@ -1,20 +1,31 @@
-<div class="list-search-item" *ngIf="treeSelectSearchDirective.searchable">
-  <prizm-input-layout
-    [label]="treeSelectSearchDirective.searchLabelTranslation$ | async"
-    (clear)="treeSelectSearchDirective.clear()"
-  >
-    <input
-      class="input-search"
-      [ngModelOptions]="{ standalone: true }"
-      [ngModel]="treeSelectSearchDirective.query"
-      (ngModelChange)="treeSelectSearchDirective.search($event)"
-      prizmInput
-    />
-  </prizm-input-layout>
-</div>
+<ng-container *ngIf="treeSelectSearchDirective.searchable">
+  <div class="list-search-item">
+    <prizm-input-layout
+      [label]="treeSelectSearchLabelDirective.value$ | async"
+      (clear)="treeSelectSearchDirective.clear()"
+    >
+      <input
+        class="input-search"
+        [ngModelOptions]="{ standalone: true }"
+        [ngModel]="treeSelectSearchDirective.query"
+        (ngModelChange)="treeSelectSearchDirective.search($event)"
+        prizmInput
+      />
+    </prizm-input-layout>
+  </div>
 
-<ng-container
-  *ngIf="dataListDirective?.template"
-  [ngTemplateOutlet]="dataListDirective!.template!"
-></ng-container>
-<ng-container #viewContainerRef></ng-container>
+  <div class="empty-list" *ngIf="emptyLeast$ | async">
+    <ng-container *polymorphOutlet="treeSelectEmptyTextDirective.value$ | async as content">
+      {{ content }}
+    </ng-container>
+  </div>
+</ng-container>
+
+<div class="block-with-data-list" [hidden]="emptyLeast$ | async">
+  <ng-container
+    *ngIf="projectedDataListDirective?.template"
+    [ngTemplateOutlet]="projectedDataListDirective!.template!"
+  ></ng-container>
+
+  <ng-container #viewContainerRef></ng-container>
+</div>
