--- a/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
@@ -3,17 +3,18 @@
     Our tree-select component is a wrapper around the input tree select element.
   </div>
   <ng-template prizmDocPageTab>
-    <!--    <prizm-doc-example id="base" [content]="exampleBase" heading="Base">-->
-    <!--      <prizm-tree-select-base-example></prizm-tree-select-base-example>-->
-    <!--    </prizm-doc-example>-->
     <prizm-doc-example id="projection" [content]="exampleProjection" heading="Projection">
       <prizm-tree-select-projection-example></prizm-tree-select-projection-example>
     </prizm-doc-example>
-    <prizm-doc-example id="async" [content]="exampleTransform" heading="Async">
-      <prizm-tree-select-transform-example></prizm-tree-select-transform-example>
-    </prizm-doc-example>
+
     <prizm-doc-example id="search" [content]="exampleSearch" heading="Search">
       <prizm-tree-select-search-example></prizm-tree-select-search-example>
+    </prizm-doc-example>
+    <prizm-doc-example id="i18n" [content]="exampleI18N" heading="I18N">
+      <prizm-tree-select-i18n-example></prizm-tree-select-i18n-example>
+    </prizm-doc-example>
+    <prizm-doc-example id="async" [content]="exampleTransform" heading="Async">
+      <prizm-tree-select-transform-example></prizm-tree-select-transform-example>
     </prizm-doc-example>
   </ng-template>
 
