--- a/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
@@ -4,6 +4,7 @@
   [isOpen]="$any(opened$ | async)"
   [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
   [prizmDropdownHostWidth]="'100%'"
+  [autoReposition]="false"
   (isOpenChange)="opened$$.next($event)"
 >
   <input
@@ -22,7 +23,8 @@
 
 <ng-template #dropdown>
   <prizm-input-tree-select-data-list-wrapper
-    [dataListDirective]="dataListDirective"
+    [projectedDataListDirective]="dataListDirective"
+    [parentDropdownHost]="dropdownHostRef"
     (prizmOnDestroy)="onTouch()"
   >
   </prizm-input-tree-select-data-list-wrapper>
