feat(components/tree-select): switcher width #000

--- a/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.html
@@ -9,10 +9,11 @@
     [icon]="iconTemplate"
     [class.opened]="opened"
     (click)="onToggle($event)"
+    (prizmOnInit)="parentGroupHasChildren()"
     prizmIconButton
     appearanceType="ghost"
     appearance="primary"
-    size="l"
+    size="s"
   ></button>
 
   <ng-template #iconTemplate>
