--- a/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.less
+++ b/libs/components/src/lib/components/dropdowns/tree-select/items/tree-select-item.component.less
@@ -1,3 +1,13 @@
+:host-context(.has-children-in-group) {
+  .item {
+    &:before {
+      width: calc(
+        var(--prizm-tree-select-item-level) * var(--prizm-tree-select-item-level-width, 28px) + 28px
+      );
+    }
+  }
+}
+
 .item {
   display: flex;
   align-items: center;
@@ -11,7 +21,7 @@
 
   &:before {
     content: '';
-    width: calc(var(--prizm-tree-select-item-level) * var(--prizm-tree-select-item-level-width, 24px));
+    width: calc(var(--prizm-tree-select-item-level) * var(--prizm-tree-select-item-level-width, 28px));
   }
 
   &:hover {
