--- a/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
@@ -373,7 +373,7 @@
       <li>
         <p>
           Import
-          <code>PrizmInputSelectModule</code>
+          <code>PrizmInputTreeSelectComponent</code>
           into a module where you want to use our component
         </p>
 
